fix DropdownMenu height on mobile

--- a/src/ui/components/DropdownMenu/styles.scss
+++ b/src/ui/components/DropdownMenu/styles.scss
@@ -6,6 +6,7 @@
   @include text-align-start();
 
   display: inline-block;
+  height: 27px;
   padding-bottom: 2px;
   padding-top: 4px;
   position: relative;
